test/simple/correct/Abs.hs
module Abs where

main = (abs 3, abs (-4), absFloat 4.0, absFloat (-.2.0))
