test/simple/typeerrors/Edinburgh/Ex13.hs
module Ex13 where

f 1 x = 0.0
f n x = (n*x) + f (n-1) x
